add a new POI to the map

--- a/public/allstyles.css
+++ b/public/allstyles.css
@@ -32232,9 +32232,13 @@ body {
   font-family: 'Inter', sans-serif;
 };
 
-#map1 {
-  width: 798px;
-  height:500px;
+/* #map1 {
+    width: 798px;
+    height:500px;
+} */
+
+.leaflet-popup-content-wrapper .leaflet-popup-content {
+  width: 100px !important;
 }
 
 @media (min-width: 640px) {
